--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ dist-ssr
 *.sw?
 
 
-backend/node_modules
-backend/.env
 backend/uploads/
-frontend/node_modules
+backend/node_modules/
+backend/.env
+frontend/node_modules/
